// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatisticsTable /> should render empty table 1`] = `
<WithStyles(ForwardRef(Table))>
  <WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableCell))>
        name
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        mean
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        standard deviation
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
  </WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableBody)) />
</WithStyles(ForwardRef(Table))>
`;

exports[`<StatisticsTable /> should render table with data 1`] = `
<WithStyles(ForwardRef(Table))>
  <WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableCell))>
        name
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        mean
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        standard deviation
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
  </WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableBody))>
    <WithStyles(ForwardRef(TableRow))
      key="rgyr"
    >
      <WithStyles(ForwardRef(TableCell))>
        Rgyr
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        3.1416
        nm
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        1.0000
        nm
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableRow))
      key="other-analysis"
    >
      <WithStyles(ForwardRef(TableCell))>
        other-analysis
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        2.0000
        nm
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        2.0000
        nm
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
  </WithStyles(ForwardRef(TableBody))>
</WithStyles(ForwardRef(Table))>
`;
